<resources>
    <string name="app_name">SmartFridge</string>
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_list_item">Produits</string>
    <string name="bottom_settings_item">Paramètres</string>
    <string name="app_title">SmartFridge</string>
    <string name="home_first_button">Connecter un SmartFridge</string>
    <string name="first_name_component_title">Frigo principal</string>
    <string name="second_name_component_title">Armoire</string>
    <string name="temperature">Température</string>
    <string name="hygrometry">Hygrométrie</string>
    <string name="degree">%1$s°</string>
    <string name="percentage">%1$s%%</string>
    <string name="send_notif">Envoyer une notification</string>
    <string name="product_page_title">Liste de Produits</string>
    <string name="product_name">Nom du Produit</string>
    <string name="product_emplacement">Emplacement</string>
    <string name="product_expiration_date">1 jour</string>
    <string name="search_hint">Rechercher . . .</string>
    <string name="sort_product_name_description">Triez selon le nom du produit</string>
    <string name="sort_location_description">Triez selon l\'emplacement du produit</string>
    <string name="sort_expiration_period_description">Triez selon la date de péremeption du produit</string>
    <string name="add_product_description">Add new product</string>
    <string name="ic_close_description">Fermer la pop-up</string>
    <string name="popup_title">Nom du Produit</string>
    <string name="ic_status_description">Statut du produit</string>
    <string name="expiration_date_title">Date de Péremption</string>
    <string name="def_expiration_date">00/00/0000</string>
    <string name="quantity_title">Quantité</string>
    <string name="def_quantity">00</string>
    <string name="category_title">Catégorie</string>
    <string name="def_category">None</string>
    <string name="product_location_title">Emplacement</string>
    <string name="def_product_location">None</string>
    <string name="product_ecoscore_title">Ecoscore</string>
    <string name="def_product_ecoscore">X</string>
    <string name="product_nutriscore_title">Nutriscore</string>
    <string name="def_product_nutriscore">X</string>
    <string name="product_ingredients_title">Ingrédients</string>
    <string name="def_product_ingredients">Ingrédient a, ingrédient b, ingrédient c</string>
    <string name="product_brand_title">Marque</string>
    <string name="def_product_brand">marque</string>
    <string name="product_period_title">Période d\'Expiration</string>
    <string name="def_product_period">1 jour</string>
    <string name="delete_button">Supprimer</string>
    <string name="modify_button">Modifier</string>
    <string name="username">Username</string>
    <string name="settings_main_title">Settings</string>
    <string name="full_qr_code">Votre QR code</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="new_raspberry">Nouveau scanneur</string>
    <string name="content_description_qr">Ajouter un scanneur grâce à ce qr-code</string>
    <string name="new_location">Modifier Emplacements</string>
    <string name="raspberry_popup_title">Nouveau Scanneur Détecté</string>
    <string name="raspberry_popup_description">Sélectionnez une location pour enregistrer ce scanneur</string>
    <string name="raspberry_popup_location">Emplacement existant</string>
    <string name="raspberry_popup_new_location">Nouvel emplacement</string>
    <string name="raspberry_popup_save">Enregistrer</string>
    <string name="raspberry_popup_discard">Supprimer</string>
    <string name="main_title_how_to_connect">Comment se connecter ?</string>
    <string name="sub_title_how_to_connect">Afin de jumeler votre smartphone à un SmartFridge</string>
    <string name="it_must">Il faut</string>
    <string name="first_subtitle_how_to_connect"> 1. Présenter le QR code ci-dessous devant le scanner de votre boîtier Smartfridge. </string>
    <string name="second_subtitle_how_to_connect"> 2. Un bouton "Nouveau Scanneur" va apparaitre dans la page Paramètres, clickez dessus. </string>
    <string name="third_subtitle_how_to_connect"> 3. Sélectionnez l\'emplacement de votre scanneur (vous pouvez également lui attribuer un nouvel emplacement) et appuyez sur Enregistrer. </string>
    <string name="qr_code_qu_il_faut_scanner">QR-code qu\'il faut scanner</string>
    <string name="image_de_description">Image de description</string>
    <string name="terms_main_title">Politique "Vie Privée" de SmartFridge Company</string>
    <string name="terms_introduction">Merci de lire attentivement la présente Politique de protection de la vie privée. En utilisant certains de nos services, en contractant avec nous, et/ou en acceptant nos conditions générales, vous acceptez d’être lié sans réserve à la présente Politique de protection de la vie privée.</string>
    <string name="terms_first_title">Objectifs</string>
    <string name="terms_first_paragraph_01">Ce document constitue la politique "Vie Privée" mise en oeuvre par SmartFridge Company dans le cadre de ses activités. La protection de votre vie privée et de vos données à caractère personnel est d\'une importance capitale pour SmartFridge Company.</string>
    <string name="terms_first_paragraph_02">Cette politique « Vie Privée » est rédigée afin de garantir le respect du Règlement européen 2016/679 du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la Directive 95/46/EC (Règlement général sur la protection des données, ou <bold>RGPD</bold>).</string>
    <string name="terms_first_paragraph_03">Cette politique "Vie Privée" a pour but de vous informer au mieux sur le sujet et qui explique comment nous traitons vos données personnelles au sein de notre application SmartFridge.</string>
    <string name="terms_second_title">Quelle est la portée de cette politique ?</string>
    <string name="terms_second_paragraph_01">Nous recueillons et utilisons uniquement les données personnelles qui sont nécessaires dans le cadre de nos activités et qui nous permettent de représenter les articles qui se trouvent dans vos endroits de stockage (frigos, armoires, paniers, …).</string>
    <string name="terms_third_title">Quelles données sont couvertes par notre politique ?</string>
    <string name="terms_third_paragraph_01">Les données couvertes par la présente politique sont les données à caractère personnel des personnes physiques, c’est-à-dire des données qui permettent directement ou indirectement d’identifier une personne.</string>
    <string name="terms_third_paragraph_02">Dans le cadre de vos relations et interactions avec SmartFridge Company, nous pouvons être amenés à collecter différentes données à caractère personnel, telles que :</string>
    <string name="terms_third_paragraph_03">• <bold>Des données d\'identification et de contact</bold> (nom, prénom, adresse mail).</string>
    <string name="terms_third_paragraph_04">Nous ne traitons jamais de données relatives à vos origines raciales ou ethniques, vos opinions politiques, votre religion, vos convictions philosophiques ou l’appartenance syndicale, vos données génétiques, votre vie sexuelle ou orientation sexuelle à moins que la législation nous l\'impose ou que cela résulte de l\'exécution que vous faites de nos produits et services (exemple : vous mentionnez ce type d\'information).</string>
    <string name="terms_fourth_title">Principes pour traiter les données à caractères personnel</string>
    <string name="terms_fourth_paragraph_01">SmartFridge respectera entre autres les principes suivants lors des traitements des données à caractère personnel :</string>
    <string name="terms_fourth_paragraph_02">• <bold>Traitement de données licite</bold> ("qui est permis par la loi, par l'autorité établie").</string>
    <string name="terms_fourth_paragraph_03">• <bold>Minimisation du traitement des données :</bold> SmartFridge Company limite le traitement des données à caractère personnel à ce qui est nécessaire dans le cadre de ses activités.</string>
    <string name="terms_fourth_paragraph_04">• <bold>Mesure de sécurité : </bold>SmartFridge Company prend les mesures techniques et/ou organisationnelles nécessaires et adéquates pour la sécurité des données à caractère personnel.</string>
    <string name="terms_fifth_title"> Quand vos données à caractère personnel sont-elles collectées ?</string>
    <string name="terms_fifth_paragraph_01">Vos données sont uniquement collectées par notre entreprise SmartFridge Company ; aucune donnée n\'est fournie ou transmise à d\'autres entreprises. A quel moment ?</string>
    <string name="terms_fifth_paragraph_02">• Lorsque vous devenez membre après avoir rempli le formulaire d\'inscription. Seule les données d\'identification et de contact sont collectées.</string>
    <string name="terms_fifth_paragraph_03">• Lorsque vous scanner ou introduisez manuellement un article (uniquement les informations en rapport avec l\'article : date de péremption, poids, matières grasses, énergie (kcal), protéines, glucides et tous les ingrédients qui le composent).</string>
    <string name="terms_sixth_title">Sur quel fondement et pourquoi utilisons-nous vos données personnelles ?</string>
    <string name="terms_sixth_paragraph_01">Nous traitons vos données personnelles en vue de vous fournir les services que nous proposons : l\'affichage de vos diverses articles entreposés dans vos espaces de stockage. Nous pouvons alors vous fournir une liste complète des articles ainsi que leur date de péremption correspondant.</string>
    <string name="terms_seventh_title">Qui a accès à vos données et à qui sont-elles transférées ?</string>
    <string name="terms_seventh_paragraph_01">Les uniques personnes ayant accès à vos données sont les développeurs qui, lorsque qu\'une maintenance ou une demande particulière d\'un client doit être effectuée, ont indirectement accès à vos données à caractère personnel. Mais aucun intervenant externe au secteur de développement n\'a accès aux données. Nous nous assurons qu\'ils traitent vos données d\'une manière sûre et respectueuse. De manière plus générale, nous ne vendons aucune de vos données personnelles à des tiers.</string>
    <string name="terms_eighth_title">Combien de temps conservons-nous vos données ?</string>
    <string name="terms_eighth_paragraph_01">Nous conservons vos données personnelles pour une durée de 3 ans comme le stipule la loi. Une chose importante à souligner est le fait que tout utilisateur est autorisé à supprimer son compte ainsi que les données qui le contiennent via un bouton "Supprimer mon compte" sur la page Paramètres de notre application SmartFridge.</string>
    <string name="terms_ninth_title">Quels sont vos droits et comment les exercer ?</string>
    <string name="terms_ninth_paragraph_01">Vous disposez de différents droits :</string>
    <string name="terms_ninth_paragraph_02">• Le droit de demander l\'accès aux données à caractère personnel;</string>
    <string name="terms_ninth_paragraph_03">• Le droit à la rectification;</string>
    <string name="terms_ninth_paragraph_04">• Le droit à l\'effacement des données;</string>
    <string name="terms_ninth_paragraph_05">• Le droit de s’opposer au traitement;</string>
    <string name="terms_ninth_paragraph_06">• Le droit de retirer son consentement;</string>
    <string name="terms_ninth_paragraph_07">• Le droit de demander une limitation du traitement.</string>
    <string name="terms_tenth_title">Comment nous contacter ?</string>
    <string name="terms_tenth_paragraph_01">Si vous avez des questions concernant l’utilisation de vos données personnelles visée par la présente politique, vous nous contacter par e-mail à l’adresse smart.fridge.teams@gmail.com.</string>
</resources>