<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentSettings">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/main_title_page_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_main_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/usernameSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        style="@style/main_title_sign_up_page"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/title_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_qr_code"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <ImageView
        android:id="@+id/ivQRcode"
        android:contentDescription="@string/content_description_qr"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="204dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_raspberry"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/settings_button_margin_top"
        android:background="@drawable/sign_up_inscription_button"
        android:text="@string/new_raspberry"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivQRcode" />

    <Button
        android:id="@+id/new_location"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/settings_button_margin_top"
        android:background="@drawable/sign_up_inscription_button"
        android:text="@string/new_location"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_raspberry" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/settings_button_margin_top"
        android:background="@drawable/sign_up_inscription_button"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_location" />

</androidx.constraintlayout.widget.ConstraintLayout>