<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToConnect">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HowToConnect">

        <TextView
            android:id="@+id/textView4"
            style="@style/main_title_how_to_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title_how_to_connect"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/normal_text"
            app:layout_constrainedWidth="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/sub_title_how_to_connect"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/ivQRcode"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect_third_step"
            android:contentDescription="@string/qr_code_qu_il_faut_scanner" />

        <TextView
            android:id="@+id/connect_first_step"
            style="@style/normal_text"
            app:layout_constraintWidth_default="spread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/first_subtitle_how_to_connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/connect_second_step"
            style="@style/normal_text"
            app:layout_constraintWidth_default="spread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/second_subtitle_how_to_connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect_first_step" />

        <TextView
            android:id="@+id/connect_third_step"
            style="@style/normal_text"
            app:layout_constraintWidth_default="spread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/third_subtitle_how_to_connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect_second_step" />

        <TextView
            android:id="@+id/textView3"
            style="@style/it_must"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/it_must"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="78dp"
            android:layout_height="100dp"
            android:src="@drawable/smartphone"
            android:layout_marginEnd="@dimen/large_margin"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/image_de_description" />


        <ImageButton
            android:id="@+id/return_icon"
            android:layout_width="@dimen/icon_dimensions"
            android:layout_height="@dimen/icon_dimensions"
            android:layout_marginStart="@dimen/label_side_margin"
            android:background="@color/beige"
            android:contentDescription="@string/ic_close_description"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:src="@drawable/ic_arrow_left"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/dark_green" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>