<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_popup"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/raspberry_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/raspberry_popup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/raspberry_popup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/raspberry_popup_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_title" />

    <TextView
        android:id="@+id/raspberry_popup_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raspberry_popup_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_description" />

    <Spinner
        android:id="@+id/location_popup_spinner"
        style="@style/SpinnerTheme"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_location" />

    <TextView
        android:id="@+id/raspberry_popup_new_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raspberry_popup_new_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_popup_spinner" />

    <EditText
        android:id="@+id/location_popup_new_location_edit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raspberry_popup_new_location" />

    <Button
        android:id="@+id/location_popup_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raspberry_popup_save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/raspberry_popup_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raspberry_popup_discard"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>